add links to remote git repository

--- a/index.html
+++ b/index.html
@@ -89,16 +89,15 @@
 
     <section id="projects">
       <h2>My Projects</h2>
-      <!--Link the images and the titles to the github folders-->
       <div class="project-entry">
-        <h3>To-do List</h3>
+        <h3><a href="https://github.com/Tobias2099/The-Stuff-List">To-do List</a></h3>
         <p>Full stack to-do list application built using Node.js, Express.js, PostgreSQL, EJS and CSS</p>
-        <img src="./images/ToDoList.png" alt="screenshot of to-do list app" height="500px" width="800px"/>
+        <a href="https://github.com/Tobias2099/The-Stuff-List"><img src="./images/ToDoList.png" alt="screenshot of to-do list app" height="500px" width="800px"/></a>
       </div>
       <div class="project-entry">
-        <h3>"Concentration" Memory Game</h3>
+        <h3><a href="https://github.com/Tobias2099/Memory-Game">"Concentration" Memory Game</a></h3>
         <p>React application that uses extensive state management and DOM manipulation for dynamic user interaction</p>
-        <img src="./images/MemoryGame.png" alt="screenshot of memory game" height="500px" width="800px"/>
+        <a href="https://github.com/Tobias2099/Memory-Game"><img src="./images/MemoryGame.png" alt="screenshot of memory game" height="500px" width="800px"/></a>
       </div>
     </section>
 
