--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="skill-entry">
           <span class="skill-title">Flask</span>
-          <img src="./images/FlaskLogo.png" alt="Flask logo">
+          <img id="flask-icon" src="./images/FlaskLogo.png" alt="Flask logo">
         </div>
         <div class="skill-entry">
           <span class="skill-title">PostgreSQL</span>
@@ -102,14 +102,24 @@
       <h2>My Projects</h2>
       <div id="project-grid">
         <div class="project-entry">
+          <h3><a href="https://github.com/Tobias2099/Conversify">Conversify</a></h3>
+          <p>Multi-language conversation simulator built with React, Flask, and Cohere LLM</p>
+          <a href="https://github.com/Tobias2099/Conversify"><img src="./images/Conversify.png" alt="screenshot of Concentration Memory Game"></a>
+        </div>
+        <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/The-Stuff-List">The Stuff List</a></h3>
           <p>Full-stack Task Tracker application built using Node.js, Express.js, PostgreSQL, and EJS.</p>
-          <a href="https://github.com/Tobias2099/The-Stuff-List"><img src="./images/ToDoList.png" alt="screenshot of The Stuff List project"></a>
+          <a href="https://github.com/Tobias2099/The-Stuff-List"><img src="./images/TaskTracker.png" alt="screenshot of The Stuff List project"></a>
         </div>
         <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/Memory-Game">Pair To Play</a></h3>
-          <p>Memory game built using React, Node.js, and MongoDB, featuring dynamic state management and real-time data handling.</p>
-          <a href="https://github.com/Tobias2099/Memory-Game"><img src="./images/MemoryGame.png" alt="screenshot of Concentration Memory Game"></a>
+          <p>Memory game built using React, Node.js, and MongoDB for dynamic state management and real-time data handling.</p>
+          <a href="https://github.com/Tobias2099/Memory-Game"><img src="./images/PairToPlay.png" alt="screenshot of Concentration Memory Game"></a>
+        </div>
+        <div class="project-entry">
+          <h3><a href="https://github.com/anubhavsengupta/FarmBuddy">Plot Perfect</a></h3>
+          <p>Soil and Crop Compatibility Assessment Tool built using React, Flask and a trained machine learning model.</p>
+          <a href="https://github.com/anubhavsengupta/FarmBuddy"><img src="./images/PlotPerfect.png" alt="screenshot of Concentration Memory Game"></a>
         </div>
       </div>
     </section>
@@ -121,4 +131,4 @@
       <a href="https://www.linkedin.com/in/tobias-pong-19125528b/"><span>My LinkedIn</span></a>
     </section>
   </body>
-</html>
+</html
