--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="project-entry">
           <h3><a href="https://github.com/anubhavsengupta/FarmBuddy">Plot Perfect</a></h3>
-          <p>Soil and Crop Compatibility Assessment Tool built using React, Flask and a trained machine learning model.</p>
+          <p>Soil and Crop Compatibility Assessment Tool built with React, Flask and a trained machine learning model.</p>
           <a href="https://github.com/anubhavsengupta/FarmBuddy"><img src="./images/PlotPerfect.png" alt="screenshot of Concentration Memory Game"></a>
         </div>
       </div>
