add dimensions to images

--- a/index.html
+++ b/index.html
@@ -107,22 +107,22 @@
         <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/Conversify">Conversify</a></h3>
           <p>Multi-language conversation simulator built with React, Flask, and Cohere LLM</p>
-          <a href="https://github.com/Tobias2099/Conversify"><img src="./images/Conversify.png" alt="screenshot of Concentration Memory Game"></a>
+          <a href="https://github.com/Tobias2099/Conversify"><img src="./images/Conversify.png" width="500px" height="300px" alt="screenshot of Conversify"></a>
         </div>
         <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/The-Stuff-List">The Stuff List</a></h3>
           <p>Full-stack Task Tracker application built using Node.js, Express.js, PostgreSQL, and EJS.</p>
-          <a href="https://github.com/Tobias2099/The-Stuff-List"><img src="./images/TaskTracker.png" alt="screenshot of The Stuff List project"></a>
+          <a href="https://github.com/Tobias2099/The-Stuff-List"><img src="./images/TaskTracker.png" width="500px" height="300px" alt="screenshot of The Stuff List project"></a>
         </div>
         <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/Memory-Game">Pair To Play</a></h3>
           <p>Memory game built using React, Node.js, and MongoDB for state management and real-time data handling.</p>
-          <a href="https://github.com/Tobias2099/Memory-Game"><img src="./images/PairToPlay.png" alt="screenshot of Concentration Memory Game"></a>
+          <a href="https://github.com/Tobias2099/Memory-Game"><img src="./images/PairToPlay.png" width="500px" height="300px" alt="screenshot of Concentration Memory Game"></a>
         </div>
         <div class="project-entry">
           <h3><a href="https://github.com/anubhavsengupta/FarmBuddy">Plot Perfect</a></h3>
           <p>Soil and Crop Affinity Assessment Tool built with React, Flask and a trained machine learning model.</p>
-          <a href="https://github.com/anubhavsengupta/FarmBuddy"><img src="./images/PlotPerfect.png" alt="screenshot of Concentration Memory Game"></a>
+          <a href="https://github.com/anubhavsengupta/FarmBuddy"><img src="./images/PlotPerfect.png" width="500px" height="300px" alt="screenshot of Plot Perfect"></a>
         </div>
       </div>
     </section>
