refine project dimensions

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div id="project-grid">
         <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/Conversify">Conversify</a></h3>
-          <p>Multi-language conversation simulator built with React, Flask, and Cohere LLM</p>
+          <p>Multi-language conversation simulator built using React, Flask, and Cohere LLM</p>
           <a href="https://github.com/Tobias2099/Conversify"><img src="./images/Conversify.png" width="500px" height="300px" alt="screenshot of Conversify"></a>
         </div>
         <div class="project-entry">
