--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
         </div>
         <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/Memory-Game">Pair To Play</a></h3>
-          <p>Memory game built using React, Node.js, and MongoDB for state management and real-time data handling.</p>
+          <p>Memory game built using React, Node.js, and MongoDB for state management and data handling.</p>
           <a href="https://github.com/Tobias2099/Memory-Game"><img src="./images/PairToPlay.png" width="500px" height="300px" alt="screenshot of Concentration Memory Game"></a>
         </div>
         <div class="project-entry">
           <h3><a href="https://github.com/anubhavsengupta/FarmBuddy">Plot Perfect</a></h3>
-          <p>Soil and Crop Affinity Assessment Tool built with React, Flask and a trained machine learning model.</p>
+          <p>Soil and Crop Affinity Assessment Tool built with React, Flask and a trained ML model.</p>
           <a href="https://github.com/anubhavsengupta/FarmBuddy"><img src="./images/PlotPerfect.png" width="500px" height="300px" alt="screenshot of Plot Perfect"></a>
         </div>
       </div>
