add Anailytic project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
 
     <section id="intro">
-      <h1>Hi, I'm Tobias<br />I'm an aspiring professional full stack web developer!</h1>
+      <h1>Hi, I'm Tobias<br />Aspiring Software Developer with a deep passion for AI</h1>
       <a href="#projects" class="cta-button">View My Projects</a>
     </section>
 
@@ -30,7 +30,7 @@
     <section id="about">
       <h2>About Me</h2>
       <img src="./images/blankProfilePic.png" alt="blank profile picture"/>
-      <p>I am a passionate computer science student at the University of Waterloo with a strong interest in coding and web development. I love tackling challenging coding problems and working on meaningful projects. Although I am currently exploring various career paths in computer science, I am most interested in AI and machine learning. Outside of academics, I enjoy watching TV shows and taking walks with friends.</p>
+      <p>I’m an ambitious and passionate Computer Science student at the University of Waterloo with a deep interest in AI and software development. What excites me most about the field is its limitless potential — how just a few lines of code or a well-processed dataset can lead to powerful, real-world impact. Whether it’s a new co-op opportunity or a challenging hackathon, I’m always eager to take on new problems, learn quickly, and grow as a developer.</p>
     </section>
   
     <section id="skills">
@@ -83,16 +83,16 @@
           <img src="./images/JSlogo.png" alt="JavaScript logo">
         </div>
         <div class="skill-entry">
-          <span class="skill-title">HTML</span>
-          <img src="./images/HTMLlogo.png" alt="HTML logo">
+          <span class="skill-title">C#</span>
+          <img src="./images/Csharp_Logo.png" alt="HTML logo">
         </div>
         <div class="skill-entry">
-          <span class="skill-title">CSS</span>
-          <img src="./images/CSSlogo.png" alt="CSS logo">
+          <span class="skill-title">PyTorch</span>
+          <img src="./images/PyTorch_logo.png" alt="CSS logo">
         </div>
         <div class="skill-entry">
-          <span class="skill-title">Linux</span>
-          <img src="./images/LinuxLogo.png" alt="Linux logo">
+          <span class="skill-title">ASP.NET</span>
+          <img src="./images/asp-net-logo.png" alt="Linux logo">
         </div>
         <div class="skill-entry">
           <span class="skill-title">Git</span>
@@ -104,25 +104,26 @@
     <section id="projects">
       <h2>My Projects</h2>
       <div id="project-grid">
+        
+        <div class="project-entry">
+          <h3><a href="https://github.com/Tobias2099/NailDiagnosis">Anailytic</a></h3>
+          <p>AI Nail Health Diagnosis Tool built using React, Flask, Azure, MySQL and PyTorch.</p>
+          <a href="https://github.com/Tobias2099/NailDiagnosis"><img src="./images/Anailytic.png" width="500px" height="300px" alt="screenshot of Anailytic"></a>
+        </div>
         <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/Conversify">Conversify</a></h3>
-          <p>Multi-language conversation simulator built using React, Flask, and Cohere LLM</p>
+          <p>AI Conversation Trainer built using React, Node.js, Express.js, MongoDB, Google Cloud Console, and Cohere LLM.</p>
           <a href="https://github.com/Tobias2099/Conversify"><img src="./images/Conversify.png" width="500px" height="300px" alt="screenshot of Conversify"></a>
+        </div>
+        <div class="project-entry">
+          <h3><a href="https://github.com/anubhavsengupta/FarmBuddy">Plot Perfect</a></h3>
+          <p>AI Soil and Crop Compatibility Assessment Tool built with React, Flask and a trained ML model.</p>
+          <a href="https://github.com/anubhavsengupta/FarmBuddy"><img src="./images/PlotPerfect.png" width="500px" height="300px" alt="screenshot of Plot Perfect"></a>
         </div>
         <div class="project-entry">
           <h3><a href="https://github.com/Tobias2099/The-Stuff-List">The Stuff List</a></h3>
           <p>Full-stack Task Tracker application built using Node.js, Express.js, PostgreSQL, and EJS.</p>
           <a href="https://github.com/Tobias2099/The-Stuff-List"><img src="./images/TaskTracker.png" width="500px" height="300px" alt="screenshot of The Stuff List project"></a>
-        </div>
-        <div class="project-entry">
-          <h3><a href="https://github.com/Tobias2099/Memory-Game">Pair To Play</a></h3>
-          <p>Memory game built using React, Node.js, and MongoDB for state management and data handling.</p>
-          <a href="https://github.com/Tobias2099/Memory-Game"><img src="./images/PairToPlay.png" width="500px" height="300px" alt="screenshot of Concentration Memory Game"></a>
-        </div>
-        <div class="project-entry">
-          <h3><a href="https://github.com/anubhavsengupta/FarmBuddy">Plot Perfect</a></h3>
-          <p>Soil and Crop Affinity Assessment Tool built with React, Flask and a trained ML model.</p>
-          <a href="https://github.com/anubhavsengupta/FarmBuddy"><img src="./images/PlotPerfect.png" width="500px" height="300px" alt="screenshot of Plot Perfect"></a>
         </div>
       </div>
     </section>
